deployments/gke/service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-backend
  namespace: registry
  labels:
    app: registry-backend
    service: registry-backend
spec:
  type: LoadBalancer
  selector:
    app: registry-backend
  ports:
  - port: 8080
    name: grpc
#    targetPort: 8080
    protocol: TCP
