deployments/gke/service.yaml
#  This configuration exposes the Registry backend through an external load balancer.
apiVersion: v1
kind: Service
metadata:
  name: registry-backend
  namespace: registry
  labels:
    app: registry-backend
    service: registry-backend
spec:
  type: LoadBalancer
  selector:
    app: registry-backend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
